frent/src/pages/profile/profileEdits.css
/* .information-user{
  
} */

.user-profile {
  max-width: 800px;
  display: flex;
  align-items: normal;
  margin: 20px auto;
  border: 2px solid black;
  border-radius: 10px;
  padding: 10px;
}

.image-profile {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.user-card {
  margin-right: 10px;
  border-radius: 10px;
  background-color: white;
  padding: 20px;
  box-shadow: 0px 4px 8px 5px rgba(0, 0, 0, 0.1);
  width: 90%;
}

.user-avatar {
  object-fit: cover;
  width: 150px;
}

.user-name {
  font-size: 1.5rem;
  margin-top: 10px;
}

.user-details {
  margin-top: 10px;
  width: 100%;
}

.user-details p {
  width: 100%;
}

.user-price {
  font-size: 1.2rem;
  text-align: center;
  color: #000;
}

.user-description {
  width: 60%;
  display: flex;
  flex-direction: column;
  margin-left: 7%;
  margin-bottom: 2px;
}

.user-interests {
  width: auto;
  display: inline-block;
  margin-bottom: 0px;
}

.interest-selected {
  background-color: var(--tertiary-color);
  color: white;
  padding: 8px 11px;
  border-radius: 10px;
  margin-top: 7px;
  margin: 5px;
  width: auto;
  display: inline-block;
  margin-bottom: 6px;
}

.btn-back-reserve {
  display: flex;
  width: 102% auto;
  justify-content: flex-end;
  margin-top: 10px;
  width: 100%;
}

.alquilar-perfil {
  display: flex;
  flex-direction: center;
  align-items: center;
  margin-left: 5%;
}

.btn-back-alquilar {
  display: flex;
  justify-content: flex-end;
  margin-top: 15px;
  width: 140%;
  margin-left: -64%;
}
.user-center-b {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
}


.verified-icon {
  margin-right: 0.5rem;
}

.location-container {
  display: flex;
  align-items: center;
  justify-content: start;
}

.location-icon {
  margin-right: 0.5rem;
}
/* .comment-section-container {
  width: 80%;
  margin: 20px auto;
  padding: 20px;
  background-color: #fff;
  border-radius: 10px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
} */
.comment-section {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 20px;
}

.comment-text {
  background-color: #fff;
  padding: 10px;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
  margin-bottom: 10px;
}

.comment-navigation {
  display: flex;
  justify-content: center;
}

.comment-button {
  background-color: var(--tertiary-color);
  color: #fff;
  border: none;
  padding: 8px 16px;
  border-radius: 5px;
  margin: 0 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.comment-button:hover {
  background-color: var(--secondary-color);
}

